k8s-cluster/mainfest/network-policies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-nginx-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: flask-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
    - podSelector:
        matchLabels:
          app: ingress-nginx
    - ipBlock:
        cidr: 192.168.0.100/32  # Replace with the malicious IP address
    ports:
    - protocol: TCP
      port: 80
